// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard render snapshots 📸 Dashboard should match snap shot 1`] = `
<div
  className="dashboard__flexbox"
>
  <div
    className="bill__wrapper"
  >
    <div
      className="bill__section"
    >
      <SearchBar
        activeTab="allBills"
      />
      <button
        className="btn btn-primary"
        id="add__bill__button"
        onClick={[Function]}
      >
         
        + Add bill
         
      </button>
      <ul
        className="nav nav-tabs"
      >
        <li
          className="nav-item"
        >
          <a
            className="nav-link active"
            onClick={[Function]}
          >
            All bills
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            onClick={[Function]}
          >
            Notifications
          </a>
        </li>
      </ul>
      <div
        className="bill__list__section"
      >
        <BillDisplay />
      </div>
    </div>
    <div
      className="specific__bill__section"
    >
      <BillSummary />
    </div>
  </div>
</div>
`;

exports[`Dashboard render snapshots 📸 Dashboard should match snap shot if no user logged 1`] = `null`;

exports[`Dashboard render snapshots 📸 Dashboard should match snap shot on nothing 1`] = `
<div
  className="dashboard__flexbox"
>
  <div
    className="bill__wrapper"
  >
    <div
      className="bill__section"
    >
      <SearchBar
        activeTab=""
      />
      <button
        className="btn btn-primary"
        id="add__bill__button"
        onClick={[Function]}
      >
         
        + Add bill
         
      </button>
      <ul
        className="nav nav-tabs"
      >
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            onClick={[Function]}
          >
            All bills
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            onClick={[Function]}
          >
            Notifications
          </a>
        </li>
      </ul>
      <div
        className="bill__list__section"
      >
        <div
          className="billsnap-loader loader"
        >
          Loading...
        </div>
      </div>
    </div>
    <div
      className="specific__bill__section"
    >
      <BillSummary />
    </div>
  </div>
</div>
`;

exports[`Dashboard render snapshots 📸 Dashboard should match snap shot on notifications tab 1`] = `
<div
  className="dashboard__flexbox"
>
  <div
    className="bill__wrapper"
  >
    <div
      className="bill__section"
    >
      <SearchBar
        activeTab="owedToYou"
      />
      <button
        className="btn btn-primary"
        id="add__bill__button"
        onClick={[Function]}
      >
         
        + Add bill
         
      </button>
      <ul
        className="nav nav-tabs"
      >
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            onClick={[Function]}
          >
            All bills
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            className="nav-link active"
            onClick={[Function]}
          >
            Notifications
          </a>
        </li>
      </ul>
      <div
        className="bill__list__section"
      >
        <PendingBillsContainer />
      </div>
    </div>
    <div
      className="specific__bill__section"
    >
      <BillSummary />
    </div>
  </div>
</div>
`;

exports[`Dashboard render snapshots 📸 Dashboard should match snapshot with a large bill card 1`] = `
<div
  className="dashboard__flexbox"
>
  <div
    className="bill__wrapper"
  >
    <div
      className="bill__section"
    >
      <SearchBar
        activeTab="allBills"
      />
      <button
        className="btn btn-primary"
        id="add__bill__button"
        onClick={[Function]}
      >
         
        + Add bill
         
      </button>
      <ul
        className="nav nav-tabs"
      >
        <li
          className="nav-item"
        >
          <a
            className="nav-link active"
            onClick={[Function]}
          >
            All bills
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            onClick={[Function]}
          >
            Notifications
          </a>
        </li>
      </ul>
      <div
        className="bill__list__section"
      >
        <BillDisplay />
      </div>
    </div>
    <div
      className="specific__bill__section"
    >
      <BillSummary />
      <div
        className="large__bill card"
      >
        <div
          className="inner__bill__dimensions"
        >
          <div
            className="split_between space-top"
          >
            <div>
              Bill # 
              38
            </div>
            <div
              className="embolden"
            >
              YEBOI
            </div>
          </div>
          <div
            className="inner__bill_container"
          >
            <div
              className="card-body"
            >
              <div
                className="split_between"
              >
                <div />
                <div
                  className="sub-text"
                >
                  09-12-2019 00:46:00 -0500
                </div>
              </div>
              <div
                className="split_between"
              >
                <div />
                <div
                  className="sub-text"
                >
                  Category: 
                  string
                </div>
              </div>
              <br />
              <div
                className="split_between"
              >
                <div
                  className="sub-text"
                >
                  Items:
                </div>
                <div />
              </div>
              <div
                className="split_between embolden"
              >
                <div>
                  <div
                    className="split_between"
                  >
                    <div
                      className="sub_items_text"
                    >
                      BIGGEST LAD
                    </div>
                    <ItemSplitContainer
                      bill={
                        Object {
                          "balance": "4385.00",
                          "category": "string",
                          "company": "string",
                          "created": "09-12-2019 00:46:00 -0500",
                          "creator": Object {
                            "birthDate": "2020-07-25",
                            "email": "test@Password123.com",
                            "firstName": "string",
                            "gender": "MALE",
                            "id": 23,
                            "lastName": "string",
                            "location": Object {
                              "address": "string",
                              "city": "string",
                              "country": "string",
                              "description": "string",
                              "name": "string",
                              "postalCode": "string",
                              "state": "string",
                            },
                            "middleName": "string",
                            "phoneNumber": "string",
                          },
                          "id": 38,
                          "informationPerAccount": Array [
                            Object {
                              "account": Object {
                                "birthDate": "2020-07-25",
                                "email": "test@Password123.com",
                                "firstName": "string",
                                "gender": "MALE",
                                "id": 23,
                                "lastName": "string",
                                "location": Object {
                                  "address": "string",
                                  "city": "string",
                                  "country": "string",
                                  "description": "string",
                                  "name": "string",
                                  "postalCode": "string",
                                  "state": "string",
                                },
                                "middleName": "string",
                                "phoneNumber": "string",
                              },
                              "amountPaid": null,
                              "amountRemaining": "4073.45",
                              "invitationStatus": "ACCEPTED",
                              "items": Array [
                                Object {
                                  "cost": 2000,
                                  "itemId": 89,
                                  "name": "BIGGEST LAD",
                                  "percentage": 100,
                                },
                                Object {
                                  "cost": 300,
                                  "itemId": 52,
                                  "name": "Bigger String",
                                  "percentage": 60,
                                },
                                Object {
                                  "cost": 1500,
                                  "itemId": 51,
                                  "name": "ENLARGEN",
                                  "percentage": 90,
                                },
                              ],
                              "paidStatus": null,
                              "subTotal": "3530.00",
                              "taxes": "529.50",
                              "tip": "13.95",
                              "total": "4073.45",
                            },
                            Object {
                              "account": Object {
                                "birthDate": "2020-07-25",
                                "email": "many@bills.com",
                                "firstName": "string",
                                "gender": "MALE",
                                "id": 53,
                                "lastName": "string",
                                "location": Object {
                                  "address": "string",
                                  "city": "string",
                                  "country": "string",
                                  "description": "string",
                                  "name": "string",
                                  "postalCode": "string",
                                  "state": "string",
                                },
                                "middleName": "string",
                                "phoneNumber": "string",
                              },
                              "amountPaid": "0.00",
                              "amountRemaining": "0.00",
                              "invitationStatus": "ACCEPTED",
                              "items": Array [],
                              "paidStatus": null,
                              "subTotal": "0.00",
                              "taxes": "0.00",
                              "tip": "0.00",
                              "total": "0.00",
                            },
                            Object {
                              "account": Object {
                                "birthDate": null,
                                "email": "test2@Password123.com",
                                "firstName": "string",
                                "gender": null,
                                "id": 24,
                                "lastName": "string",
                                "location": null,
                                "middleName": null,
                                "phoneNumber": null,
                              },
                              "amountPaid": null,
                              "amountRemaining": "311.55",
                              "invitationStatus": "ACCEPTED",
                              "items": Array [
                                Object {
                                  "cost": 300,
                                  "itemId": 52,
                                  "name": "Bigger String",
                                  "percentage": 40,
                                },
                                Object {
                                  "cost": 1500,
                                  "itemId": 51,
                                  "name": "ENLARGEN",
                                  "percentage": 10,
                                },
                              ],
                              "paidStatus": null,
                              "subTotal": "270.00",
                              "taxes": "40.50",
                              "tip": "1.05",
                              "total": "311.55",
                            },
                          ],
                          "items": Array [
                            Object {
                              "cost": "2000.00",
                              "id": 89,
                              "name": "BIGGEST LAD",
                            },
                            Object {
                              "cost": "300.00",
                              "id": 52,
                              "name": "Bigger String",
                            },
                            Object {
                              "cost": "1500.00",
                              "id": 51,
                              "name": "ENLARGEN",
                            },
                          ],
                          "name": "YEBOI",
                          "responsible": Object {
                            "birthDate": "2020-07-25",
                            "email": "test@Password123.com",
                            "firstName": "string",
                            "gender": "MALE",
                            "id": 23,
                            "lastName": "string",
                            "location": Object {
                              "address": "string",
                              "city": "string",
                              "country": "string",
                              "description": "string",
                              "name": "string",
                              "postalCode": "string",
                              "state": "string",
                            },
                            "middleName": "string",
                            "phoneNumber": "string",
                          },
                          "splitBy": "ITEM",
                          "status": "OPEN",
                          "taxes": Array [
                            Object {
                              "id": 12,
                              "name": "string",
                              "percentage": 15,
                            },
                          ],
                          "totalTip": "15.00",
                          "updated": "25-07-2020 00:50:04 -0400",
                        }
                      }
                      selectedItemId={89}
                    />
                  </div>
                </div>
                <div>
                  2000.00
                   $
                </div>
              </div>
              <div
                className="split_between embolden"
              >
                <div>
                  <div
                    className="split_between"
                  >
                    <div
                      className="sub_items_text"
                    >
                      Bigger String
                    </div>
                    <ItemSplitContainer
                      bill={
                        Object {
                          "balance": "4385.00",
                          "category": "string",
                          "company": "string",
                          "created": "09-12-2019 00:46:00 -0500",
                          "creator": Object {
                            "birthDate": "2020-07-25",
                            "email": "test@Password123.com",
                            "firstName": "string",
                            "gender": "MALE",
                            "id": 23,
                            "lastName": "string",
                            "location": Object {
                              "address": "string",
                              "city": "string",
                              "country": "string",
                              "description": "string",
                              "name": "string",
                              "postalCode": "string",
                              "state": "string",
                            },
                            "middleName": "string",
                            "phoneNumber": "string",
                          },
                          "id": 38,
                          "informationPerAccount": Array [
                            Object {
                              "account": Object {
                                "birthDate": "2020-07-25",
                                "email": "test@Password123.com",
                                "firstName": "string",
                                "gender": "MALE",
                                "id": 23,
                                "lastName": "string",
                                "location": Object {
                                  "address": "string",
                                  "city": "string",
                                  "country": "string",
                                  "description": "string",
                                  "name": "string",
                                  "postalCode": "string",
                                  "state": "string",
                                },
                                "middleName": "string",
                                "phoneNumber": "string",
                              },
                              "amountPaid": null,
                              "amountRemaining": "4073.45",
                              "invitationStatus": "ACCEPTED",
                              "items": Array [
                                Object {
                                  "cost": 2000,
                                  "itemId": 89,
                                  "name": "BIGGEST LAD",
                                  "percentage": 100,
                                },
                                Object {
                                  "cost": 300,
                                  "itemId": 52,
                                  "name": "Bigger String",
                                  "percentage": 60,
                                },
                                Object {
                                  "cost": 1500,
                                  "itemId": 51,
                                  "name": "ENLARGEN",
                                  "percentage": 90,
                                },
                              ],
                              "paidStatus": null,
                              "subTotal": "3530.00",
                              "taxes": "529.50",
                              "tip": "13.95",
                              "total": "4073.45",
                            },
                            Object {
                              "account": Object {
                                "birthDate": "2020-07-25",
                                "email": "many@bills.com",
                                "firstName": "string",
                                "gender": "MALE",
                                "id": 53,
                                "lastName": "string",
                                "location": Object {
                                  "address": "string",
                                  "city": "string",
                                  "country": "string",
                                  "description": "string",
                                  "name": "string",
                                  "postalCode": "string",
                                  "state": "string",
                                },
                                "middleName": "string",
                                "phoneNumber": "string",
                              },
                              "amountPaid": "0.00",
                              "amountRemaining": "0.00",
                              "invitationStatus": "ACCEPTED",
                              "items": Array [],
                              "paidStatus": null,
                              "subTotal": "0.00",
                              "taxes": "0.00",
                              "tip": "0.00",
                              "total": "0.00",
                            },
                            Object {
                              "account": Object {
                                "birthDate": null,
                                "email": "test2@Password123.com",
                                "firstName": "string",
                                "gender": null,
                                "id": 24,
                                "lastName": "string",
                                "location": null,
                                "middleName": null,
                                "phoneNumber": null,
                              },
                              "amountPaid": null,
                              "amountRemaining": "311.55",
                              "invitationStatus": "ACCEPTED",
                              "items": Array [
                                Object {
                                  "cost": 300,
                                  "itemId": 52,
                                  "name": "Bigger String",
                                  "percentage": 40,
                                },
                                Object {
                                  "cost": 1500,
                                  "itemId": 51,
                                  "name": "ENLARGEN",
                                  "percentage": 10,
                                },
                              ],
                              "paidStatus": null,
                              "subTotal": "270.00",
                              "taxes": "40.50",
                              "tip": "1.05",
                              "total": "311.55",
                            },
                          ],
                          "items": Array [
                            Object {
                              "cost": "2000.00",
                              "id": 89,
                              "name": "BIGGEST LAD",
                            },
                            Object {
                              "cost": "300.00",
                              "id": 52,
                              "name": "Bigger String",
                            },
                            Object {
                              "cost": "1500.00",
                              "id": 51,
                              "name": "ENLARGEN",
                            },
                          ],
                          "name": "YEBOI",
                          "responsible": Object {
                            "birthDate": "2020-07-25",
                            "email": "test@Password123.com",
                            "firstName": "string",
                            "gender": "MALE",
                            "id": 23,
                            "lastName": "string",
                            "location": Object {
                              "address": "string",
                              "city": "string",
                              "country": "string",
                              "description": "string",
                              "name": "string",
                              "postalCode": "string",
                              "state": "string",
                            },
                            "middleName": "string",
                            "phoneNumber": "string",
                          },
                          "splitBy": "ITEM",
                          "status": "OPEN",
                          "taxes": Array [
                            Object {
                              "id": 12,
                              "name": "string",
                              "percentage": 15,
                            },
                          ],
                          "totalTip": "15.00",
                          "updated": "25-07-2020 00:50:04 -0400",
                        }
                      }
                      selectedItemId={52}
                    />
                  </div>
                </div>
                <div>
                  300.00
                   $
                </div>
              </div>
              <div
                className="split_between embolden"
              >
                <div>
                  <div
                    className="split_between"
                  >
                    <div
                      className="sub_items_text"
                    >
                      ENLARGEN
                    </div>
                    <ItemSplitContainer
                      bill={
                        Object {
                          "balance": "4385.00",
                          "category": "string",
                          "company": "string",
                          "created": "09-12-2019 00:46:00 -0500",
                          "creator": Object {
                            "birthDate": "2020-07-25",
                            "email": "test@Password123.com",
                            "firstName": "string",
                            "gender": "MALE",
                            "id": 23,
                            "lastName": "string",
                            "location": Object {
                              "address": "string",
                              "city": "string",
                              "country": "string",
                              "description": "string",
                              "name": "string",
                              "postalCode": "string",
                              "state": "string",
                            },
                            "middleName": "string",
                            "phoneNumber": "string",
                          },
                          "id": 38,
                          "informationPerAccount": Array [
                            Object {
                              "account": Object {
                                "birthDate": "2020-07-25",
                                "email": "test@Password123.com",
                                "firstName": "string",
                                "gender": "MALE",
                                "id": 23,
                                "lastName": "string",
                                "location": Object {
                                  "address": "string",
                                  "city": "string",
                                  "country": "string",
                                  "description": "string",
                                  "name": "string",
                                  "postalCode": "string",
                                  "state": "string",
                                },
                                "middleName": "string",
                                "phoneNumber": "string",
                              },
                              "amountPaid": null,
                              "amountRemaining": "4073.45",
                              "invitationStatus": "ACCEPTED",
                              "items": Array [
                                Object {
                                  "cost": 2000,
                                  "itemId": 89,
                                  "name": "BIGGEST LAD",
                                  "percentage": 100,
                                },
                                Object {
                                  "cost": 300,
                                  "itemId": 52,
                                  "name": "Bigger String",
                                  "percentage": 60,
                                },
                                Object {
                                  "cost": 1500,
                                  "itemId": 51,
                                  "name": "ENLARGEN",
                                  "percentage": 90,
                                },
                              ],
                              "paidStatus": null,
                              "subTotal": "3530.00",
                              "taxes": "529.50",
                              "tip": "13.95",
                              "total": "4073.45",
                            },
                            Object {
                              "account": Object {
                                "birthDate": "2020-07-25",
                                "email": "many@bills.com",
                                "firstName": "string",
                                "gender": "MALE",
                                "id": 53,
                                "lastName": "string",
                                "location": Object {
                                  "address": "string",
                                  "city": "string",
                                  "country": "string",
                                  "description": "string",
                                  "name": "string",
                                  "postalCode": "string",
                                  "state": "string",
                                },
                                "middleName": "string",
                                "phoneNumber": "string",
                              },
                              "amountPaid": "0.00",
                              "amountRemaining": "0.00",
                              "invitationStatus": "ACCEPTED",
                              "items": Array [],
                              "paidStatus": null,
                              "subTotal": "0.00",
                              "taxes": "0.00",
                              "tip": "0.00",
                              "total": "0.00",
                            },
                            Object {
                              "account": Object {
                                "birthDate": null,
                                "email": "test2@Password123.com",
                                "firstName": "string",
                                "gender": null,
                                "id": 24,
                                "lastName": "string",
                                "location": null,
                                "middleName": null,
                                "phoneNumber": null,
                              },
                              "amountPaid": null,
                              "amountRemaining": "311.55",
                              "invitationStatus": "ACCEPTED",
                              "items": Array [
                                Object {
                                  "cost": 300,
                                  "itemId": 52,
                                  "name": "Bigger String",
                                  "percentage": 40,
                                },
                                Object {
                                  "cost": 1500,
                                  "itemId": 51,
                                  "name": "ENLARGEN",
                                  "percentage": 10,
                                },
                              ],
                              "paidStatus": null,
                              "subTotal": "270.00",
                              "taxes": "40.50",
                              "tip": "1.05",
                              "total": "311.55",
                            },
                          ],
                          "items": Array [
                            Object {
                              "cost": "2000.00",
                              "id": 89,
                              "name": "BIGGEST LAD",
                            },
                            Object {
                              "cost": "300.00",
                              "id": 52,
                              "name": "Bigger String",
                            },
                            Object {
                              "cost": "1500.00",
                              "id": 51,
                              "name": "ENLARGEN",
                            },
                          ],
                          "name": "YEBOI",
                          "responsible": Object {
                            "birthDate": "2020-07-25",
                            "email": "test@Password123.com",
                            "firstName": "string",
                            "gender": "MALE",
                            "id": 23,
                            "lastName": "string",
                            "location": Object {
                              "address": "string",
                              "city": "string",
                              "country": "string",
                              "description": "string",
                              "name": "string",
                              "postalCode": "string",
                              "state": "string",
                            },
                            "middleName": "string",
                            "phoneNumber": "string",
                          },
                          "splitBy": "ITEM",
                          "status": "OPEN",
                          "taxes": Array [
                            Object {
                              "id": 12,
                              "name": "string",
                              "percentage": 15,
                            },
                          ],
                          "totalTip": "15.00",
                          "updated": "25-07-2020 00:50:04 -0400",
                        }
                      }
                      selectedItemId={51}
                    />
                  </div>
                </div>
                <div>
                  1500.00
                   $
                </div>
              </div>
              <div
                className="split_between"
              >
                <div
                  className="sub-text"
                >
                  Tips:
                </div>
                <div
                  className="embolden"
                >
                  15.00
                   $
                </div>
              </div>
              <div
                className="split_between"
              >
                <div
                  className="sub-text"
                >
                  Taxes:
                </div>
                <div
                  className="embolden"
                >
                  570.00
                   $
                </div>
              </div>
              <div
                className="split_between embolden total_balance"
              >
                <div>
                  Total Balance
                </div>
                <div>
                  4385.00
                   $
                </div>
              </div>
              <div
                className="account__icons__container"
              >
                <div>
                  <div
                    className="accounts__icons"
                  >
                    <svg
                      fill="currentColor"
                      height={50}
                      size={50}
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width={50}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
                      />
                    </svg>
                    <svg
                      className="status_icon"
                      color="#47E5B6"
                      fill="currentColor"
                      height={40}
                      size={40}
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": "#47E5B6",
                        }
                      }
                      viewBox="0 0 24 24"
                      width={40}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
                      />
                    </svg>
                  </div>
                  <p
                    className="icon__name"
                  >
                    string
                  </p>
                </div>
                <div>
                  <div
                    className="accounts__icons"
                  >
                    <svg
                      fill="currentColor"
                      height={50}
                      size={50}
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width={50}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
                      />
                    </svg>
                    <svg
                      className="status_icon"
                      color="#47E5B6"
                      fill="currentColor"
                      height={40}
                      size={40}
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": "#47E5B6",
                        }
                      }
                      viewBox="0 0 24 24"
                      width={40}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
                      />
                    </svg>
                  </div>
                  <p
                    className="icon__name"
                  >
                    string
                  </p>
                </div>
                <div>
                  <div
                    className="accounts__icons"
                  >
                    <svg
                      fill="currentColor"
                      height={50}
                      size={50}
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width={50}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
                      />
                    </svg>
                    <svg
                      className="status_icon"
                      color="#47E5B6"
                      fill="currentColor"
                      height={40}
                      size={40}
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": "#47E5B6",
                        }
                      }
                      viewBox="0 0 24 24"
                      width={40}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
                      />
                    </svg>
                  </div>
                  <p
                    className="icon__name"
                  >
                    string
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
